fix: restructure zone tests for ReBAC batched-checker compatibility
- Add zone-scoped client fixtures (nexus_a, nexus_b) with unique user IDs
- Add ephemeral_zone fixture for lifecycle tests
- Add psycopg2-binary dependency for direct DB verification
- Add helper functions: extract_paths, parse_prometheus_metric, assert_http_ok
- Restructure isolation tests to use admin writes + zone-scoped reads
- Restructure lifecycle tests to verify DB state after zone deletion
- All 47 tests pass (5 skipped for missing server features)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "testcontainers[compose]>=4.9",
     # Retry logic (cluster readiness)
     "tenacity>=9.0",
+    "psycopg2-binary>=2.9.11",
 ]
 
 [dependency-groups]
