ci: temporarily use fix/cas-result-match-exhaustive branch for nexus
The develop branch has a Rust compilation error (missing CasResult match
arm in transport/server.rs). Use the fix branch until PR #2593 merges.

--- a/.github/workflows/quick.yml
+++ b/.github/workflows/quick.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           repository: nexi-lab/nexus
           path: nexus
-          ref: develop
+          ref: fix/cas-result-match-exhaustive
 
       - name: Create .env for docker compose
         working-directory: nexus
