feat: add memory benchmark evaluation harness and E2E tests (memory/014-023)
Adds a complete benchmark evaluation harness for comparing Nexus memory
against 55+ published systems across 3 standardized academic datasets:

Benchmark harness (benchmarks/memory/):
- LoCoMo (ACL 2024): 1,540 questions across 10 conversations
- LongMemEval (ICLR 2025): 500 questions across 5 memory ability types
- TOFU: 4,000 QA pairs for selective forgetting evaluation
- Pipeline: parse → ingest → embed → retrieve → answer → judge → report
- Client-side MemoryIndex (OpenAI text-embedding-3-small) for retrieval
- GPT-4o-mini answer generation, GPT-4o/GPT-4o-mini judging, ROUGE-L scoring
- JSON checkpoint system for resumable runs
- Markdown + JSON comparison report with 7 baseline categories

Published baselines compared:
- Core: MemR3+RAG 86.75%, MemMachine 84.9%, Zep 75.1%, Mem0 66.9%
- Consolidation: SimpleMem, ACE, A-Mem
- Knowledge graph: HippoRAG2, GraphRAG, LightRAG, Circlemind, KGGen
- Reflective: MemR3, RMM, SAGE, Reflexion, Evo-Memory
- GraphRAG-Bench: 5 systems across 16 disciplines
- Cognee/HotPotQA: 4 systems
- RLM: Nexus feature baselines from arXiv:2512.24601

Memory E2E tests (tests/memory/):
- memory/014: Temporal reasoning
- memory/015: Multi-session reasoning
- memory/016: Abstention (hallucination guard)
- memory/017: Knowledge conflict resolution
- memory/018: Selective forgetting (GDPR)
- memory/019: Silent failure detection
- memory/020: Write + consolidation latency
- memory/021: Context saturation baseline
- memory/022: Procedural memory (feedback learning)
- memory/023: Multi-agent memory isolation

Also updates TEST_PLAN.md with memory/014-023 entries and benchmark
dataset sources, and adds BENCHMARK.md setup documentation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "nexus-test"
 version = "0.1.0"
-description = "E2E test suite for Nexus AI Filesystem (~355 tests)"
+description = "E2E test suite for Nexus AI Filesystem (~367 tests)"
 readme = "README.md"
 requires-python = ">=3.12"
 license = { text = "MIT" }
@@ -109,6 +109,7 @@ markers = [
     "storage: Backend drivers, CAS, caching wrappers",
     "brick: Dynamic brick management",
     "observability: Health checks, metrics, probes",
+    "benchmark: Standardized memory benchmark evaluation (LoCoMo, LongMemEval, TOFU)",
 ]
 
 # Default timeout per test (seconds). Override per-marker in conftest.
